# resume-assistant

./: .dockerignore  .env.example  .gitignore  .mise.toml  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  langgraph.json  main.py  openapi-schema.json  openapi.json  pyproject.toml  pytest.ini  release-please-config.json  renovate.json  worker.py
.claude/agents/: focused-dev-agent.md
.github/workflows/: cd.yml  ci.yml  openapi.yml  release.yml  security.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
app/: __init__.py  app_factory.py  cache.py  config.py  dependencies.py  embeddings.py  generator.py  ingestion.py  ingestion_utils.py  knowledge_store.py  llm.py  main.py  memory.py  models.py  monitoring.py  router.py  state.py  storage.py  utils.py  validator.py  vectorstore.py
app/activities/: __init__.py  critique.py  drafting.py  ingestion.py  publishing.py
app/agents/: __init__.py  deduplicator.py  generation_agent.py  generator.py  ingestion_agent.py  memory_agent.py  orchestrator.py  parser.py  validator.py
app/api/: __init__.py  dependencies.py  deps.py
app/core/: __init__.py  cache.py  database.py  errors.py  security.py  settings.py
app/frontend/: chat.js  index.html  styles.css  workspace.js
app/graphs/: __init__.py  compliance.py  critique.py  drafting.py  ingestion.py  publishing.py  supervisor.py
app/models/: __init__.py  profile.py  resume.py  review.py
app/prompts/: __init__.py  generation.py  ingestion.py  validation.py
app/routes/: __init__.py  generation.py  knowledge.py
app/services/: __init__.py  cache.py  generation.py  ingestion.py  repository.py  validation.py
app/tools/: __init__.py  errors.py  llm.py  render.py  vector.py
app/workflows/: __init__.py  resume.py
apps/backend/: .dockerignore  .env.example  .gitignore  .infisical.json  .mise.toml  .releaserc.json  AGENTS.md  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
apps/backend/app/activities/: __init__.py  compliance.py  drafting.py  ingestion.py  publishing.py
apps/backend/app/api/: __init__.py
apps/backend/app/frontend/: styles.css  workspace.js
apps/backend/app/tools/: cache.py  llm.py  notifications.py  vector.py
apps/backend/app/workflows/: resume.py
apps/backend/scripts/: generate_openapi.py  start.sh
apps/backend/tests/: test_api.py  test_sandbox.py  test_tools.py  test_workflow.py
apps/frontend/: .dockerignore  .env.example  .mise.toml  AGENTS.md  CHANGELOG.md  Caddyfile  Dockerfile  Dockerfile.dev  README.md  eslint.config.js  index.html  package.json  vite.config.ts
data/: README.md  learning.yaml  profile.yaml
data/memory/: corrections.yaml  discovered.yaml  preferences.yaml
data/test/: test_job.json  test_profile.json  test_profile_wrapped.json
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: README.md  langgraph_overhaul_plan.md
migrations/: README.md
scripts/: __init__.py  demo_pipeline.py  export_openapi.py  generate_openapi.py  migrate.sh  start.sh  test.sh
src/: main.py
tests/: conftest.py  factories.py  stubs.py  test_activities.py  test_api.py  test_cache.py  test_compliance_graph.py  test_generation_agent.py  test_generator.py  test_ingestion_agent.py  test_ingestion_graph.py  test_knowledge_store.py  test_llm_live.py  test_models.py  test_router.py  test_state.py  test_supervisor_graph.py  test_tools.py  test_validator.py  test_vectorstore.py  test_workflow.py
(+137 files in other folders)
