[project]
name = "resume-assistant"
version = "0.1.0"
description = "Production-ready AI resume tailoring service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph==0.2.32",
    "langchain-core==0.3.24",
    "langchain-openai==0.3.33",
    "pytest==8.4.2",
    "pytest-asyncio==0.24.0"
]

[project.optional-dependencies]
dev = [
    "fakeredis==2.31.3",
    "ruff==0.13.1",
    "mypy==1.13.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning"
]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
ignore_missing_imports = true
