[project]
name = "resume-assistant"
version = "0.1.0"
description = "Production-ready AI resume tailoring service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "instructor>=1.7.0",
    "openai==1.109.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.13.1",
    "mypy==1.18.2"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning"
]
pythonpath = ["."]
markers = [
    "live: marks tests that exercise external LLM APIs",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
ignore_missing_imports = true
